--- a/cards-qa.yml
+++ b/cards-qa.yml
@@ -3,10 +3,11 @@ build:
 
 
 cards:
-  message: "Welcome to AmandeaBank cards related QA APIs "
+  message: "Welcome to AmandeaBank cards related QAT APIs "
   contactDetails:
     name: "Oren - QA Team Lead"
     email: "oren7070@gamil.com"
   onCallSupport:
     - (777) 555-1234
+
     - (777) 523-1345
