--- a/loans-prod.yml
+++ b/loans-prod.yml
@@ -5,9 +5,10 @@ build:
 loans:
   message: "Welcome to AmandeaBank accounts related Production APIs "
   contactDetails:
-    name: "Eti - Production Manager"
+    name: "Eti Holzmann - Production Manager"
     email: "EtiTiwari@amandeabank.com"
   onCallSupport:
     - (111) 555-1234
 
     - (111) 523-1345
+
