--- a/eurekaserver.yml
+++ b/eurekaserver.yml
@@ -6,7 +6,8 @@ eureka:
   instance:
     hostname: localhost
   client:
-    fetchRegistry: false
-    registerWithEureka: false
+    fetch-registry: false
+    register-with-eureka: false
     serviceUrl:
+
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
