--- a/eurekaserver.yml
+++ b/eurekaserver.yml
@@ -8,6 +8,6 @@ eureka:
   client:
     fetch-registry: false
     register-with-eureka: false
-    serviceUrl:
-
+    service-Url:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+
