--- a/eurekaserver.yml
+++ b/eurekaserver.yml
@@ -5,10 +5,13 @@ server:
 eureka:
   instance:
     hostname: localhost
+  dashboard:
+    enabled: true
   client:
     fetchRegistry: false
     registerWithEureka: false
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+
 
 
