--- a/eurekaserver.yml
+++ b/eurekaserver.yml
@@ -11,7 +11,8 @@ eureka:
     fetchRegistry: false
     registerWithEureka: false
     serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: "http://${eureka.instance.hostname}:${server.port}/eureka/"
+
 
 
 
